variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: not found: value faux
while(estSurBiscuit == faux) 
                       ^